cert-manager/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging-test
  labels:
    monitoring: prometheus
    istio-injection: enabled
