cert-manager/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw-app
  namespace: staging-test
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: excalidraw-app
      version: v1
  template:
    metadata:
      labels:
        app: excalidraw-app
        version: v1
        istio: monitor
    spec:
      containers:
      - name: excalidraw-app
        image: excalidraw/excalidraw:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 80
