cert-manager/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw-app
  namespace: staging-test
spec:
  selector:
    app: excalidraw-app
  ports:
    - name: http
      port: 80          # Port that the service exposes
