cert-manager/3-destination-rule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: excalidraw-app
  namespace: staging-test
spec:
  host: excalidraw-app
  subsets:
    - name: v1
      labels:
        app: excalidraw-app
        version: v1
